--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE HTML>
 <html>
-
+<script src='https://d3js.org/d3.v5.min.js'></script>
 <body>
-
-  <p>Before the script...</p>
-
-  <script>
-    alert( 'Hello, world!' );
-  </script>
-
-  <p>...After the script.</p>
-
+<svg width=150 height=300>
+</svg>
+<script>
+xdomain = [0,1];
+xrange = [0,1];
+ydomain = [0,1];
+yrange = [0,1];
+cdomain = [0,1];
+crange = [0,1];
+xs = d3.scaleLinear().domain(xdomain).range(xrange);
+ys = d3.scaleLinear().domain(ydomain).range(yrange);
+cs = d3.scaleLinear().domain(cdomain).range(crange);
+d3.select('svg')
+  .selectAll('rect')
+  .data([4,8,15,16,23,42])
+  .enter()
+  .append('rect')
+    .attr('x',20)
+    .attr('y',function(d,i) {return ys(i);})
+    .attr('width',function(d,i) {return xs(d);})
+    .attr('height',10)
+    .style('fill',function(d,i) {return cs(d);});
+</script>
 </body>
-
 </html>
