--- a/index.html
+++ b/index.html
@@ -1,29 +1,57 @@
 <!DOCTYPE HTML>
 <html>
 <script src='https://d3js.org/d3.v5.min.js'></script>
-<body>
-<svg width=150 height=300>
-</svg>
+<body onload='init()'> <!-- Automatically load the init function -->
+
+<!-- Create the div for my headers -->
+<div style="text-align:center;">
+<h1>Interactive Website</h1>
+<h3>Jimmie Gann</h3>
+</div>
+
+<!-- Create the div for the main slide show -->
+<div style="text-align:center;">
+<svg id="svgMain" align="center" width="200" height="200"></svg>
+</div>
+
 <script>
-xdomain = [0,1];
-xrange = [0,1];
-ydomain = [0,1];
-yrange = [0,1];
-cdomain = [0,1];
-crange = [0,1];
-xs = d3.scaleLinear().domain(xdomain).range(xrange);
-ys = d3.scaleLinear().domain(ydomain).range(yrange);
-cs = d3.scaleLinear().domain(cdomain).range(crange);
-d3.select('svg')
-  .selectAll('rect')
-  .data([4,8,15,16,23,42])
-  .enter()
-  .append('rect')
-    .attr('x',20)
-    .attr('y',function(d,i) {return ys(i);})
-    .attr('width',function(d,i) {return xs(d);})
-    .attr('height',10)
-    .style('fill',function(d,i) {return cs(d);});
+
+async function init() {
+   const data = await d3.csv
+      ('https://flunky.github.io/cars2017.csv')
+
+   xs = d3.scaleLog().domain([10,150]).range([0,200]);
+   ys = d3.scaleLog().domain([10,150]).range([200,0]);
+   cs = d3.scaleLinear().domain([0,100]).range([0,200]);
+
+   const xAxis = d3.axisBottom(xs)
+                .tickValues([10, 20, 50, 100])
+                .tickFormat(d3.format('~s')); 
+   const yAxis = d3.axisLeft(ys)
+                .tickValues([10, 20, 50, 100])
+                .tickFormat(d3.format('~s')); 
+
+d3.select('svg').selectAll('circle')
+                .data(data)
+                .enter()
+                .append('circle')
+                .attr('cx', d => xs(d.AverageCityMPG))
+                .attr('cy', d => ys(d.AverageHighwayMPG))
+                .attr('r', d => d.EngineCylinders)
+                .attr('fill', 'lightblue')
+                .attr('stroke', 'black'); 
+   
+
+   d3.select('svg').append('g')
+                .attr('transform', 'translate(20,180)')
+                .call(xAxis);
+   d3.select('svg').append('g')
+                .attr('transform', 'translate(20,-20)')
+                .call(yAxis); 
+
+}
+
+
 </script>
 </body>
 </html>
