--- a/fuelType.html
+++ b/fuelType.html
@@ -143,7 +143,7 @@ async function init() {
    const hoverTip = [
 {
     note: {
-    label: "Hover of the bars for more details!",
+    label: "Hover over the bars for more details!",
     align: "left",
     wrap: 180,
     padding: 3
